Edited text and fixed bug
1. Removed irrelevant technologies in Hero section.
2. Fixed a visual bug in that the "View More" link is inside the
   unordered list and therefore doesn't fit with the design.

--- a/styles/Project/Highlighted.module.css
+++ b/styles/Project/Highlighted.module.css
@@ -22,5 +22,8 @@
 }
 
 .viewMore {
+  padding-block-start: 1em;
   font-size: 1.2rem;
+  display: grid;
+  place-content: center;
 }
